<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/about1"
        android:id="@+id/textView2"
        android:textSize="30dp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textColor="#000000"
        android:paddingTop="7dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/about2"
        android:id="@+id/textView3"
        android:textAlignment="center"
        android:paddingTop="25dp"
        android:paddingBottom="25dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonS"
        android:id="@+id/button"
        android:layout_gravity="center_horizontal"
        android:paddingTop="0dp"
        android:textStyle="bold"
        android:singleLine="true" />


</LinearLayout>