<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    android:id="@+id/coor"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:fitsSystemWindows="true"
    tools:context=".MainActivity" xmlns:fab="http://schemas.android.com/tools">

    <android.support.design.widget.AppBarLayout android:layout_height="wrap_content"
        android:layout_width="match_parent" android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar android:id="@+id/toolbar"
            android:layout_width="match_parent" android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary" app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <include layout="@layout/content_main" />


    <android.support.design.widget.FloatingActionButton android:id="@+id/fab"
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:src="@mipmap/ic_floating"
        android:layout_marginBottom="64dp"
        android:layout_marginRight="16dp"
        android:layout_gravity="bottom|end"
        app:backgroundTint="@color/colorPrimary"/>

    <ImageView
        android:id="@+id/divider"
        android:layout_width="2dp"
        android:layout_height="64dp"
        app:layout_anchor="@+id/fab"
        app:layout_anchorGravity="bottom|center"/>

    <com.github.clans.fab.FloatingActionMenu
        android:id="@+id/fabMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginBottom="125dp"
        android:layout_marginTop="10dp"

        app:layout_anchor="@+id/divider"
        app:layout_anchorGravity="bottom|center"


        fab:menu_labels_colorNormal="#333333"
        fab:menu_labels_colorPressed="#444444"
        fab:menu_labels_colorRipple="#66FFFFFF"

        fab:menu_labels_style="@style/MenuLabelsStyle"
        fab:menu_labels_showAnimation="@anim/jump_from_down"
        fab:menu_labels_hideAnimation="@anim/jump_to_down"
        fab:menu_animationDelayPerItem="0"
        fab:menu_shadowColor="#444"
        fab:menu_colorNormal="@color/colorPrimary"
        fab:menu_colorPressed="@color/colorPrimaryDark"
        fab:menu_colorRipple="@color/colorPrimary"


        >

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fab1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/fab_tracks"
            fab:fab_label="@string/nav_pistas"
            style="@style/MenuButtonsStyle"
            />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fab2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/fab_medios"
            fab:fab_label="@string/nav_medios"
            style="@style/MenuButtonsStyle" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fab3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/fab_place"
            fab:fab_label="@string/nav_lugares"
            style="@style/MenuButtonsStyle" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fab4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/fab_pym"
            fab:fab_label="@string/nav_pistYlug"
            style="@style/MenuButtonsStyle" />


    </com.github.clans.fab.FloatingActionMenu>



</android.support.design.widget.CoordinatorLayout>
