<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@color/colorPrimary"
        android:id="@+id/tituloL"
        android:layout_centerHorizontal="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/medios"
            android:id="@+id/textView"
            android:textColor="#ffffff"
            android:textSize="27dp"
            android:gravity="left"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="11dp"
            android:layout_toLeftOf="@+id/textView17"
            android:layout_toStartOf="@+id/textView17" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/apertura"
            android:id="@+id/textView17"
            android:textColor="#ffffff"
            android:textSize="27dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/cierre"
            android:id="@+id/textView18"
            android:textColor="#ffffff"
            android:textSize="27dp"
            android:gravity="right"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="11dp"/>
    </RelativeLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/tituloL"
        android:id="@+id/linear1">

        <GridView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:numColumns="3"
            android:stretchMode="columnWidth"
            android:id="@+id/tabla">
        </GridView>
    </LinearLayout>

</RelativeLayout>