<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent">


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_height="match_parent"
        android:layout_width="match_parent">

        <TabHost android:id="@+id/tabhost"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            style="@style/TabStyle">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

            <TabWidget android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@android:id/tabs"
                android:background="@color/colorPrimary"
                style="@style/TabStyle"/>

                <FrameLayout android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@android:id/tabcontent" >

                    <LinearLayout android:id="@+id/tab1"
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" >

                        <RelativeLayout
                            android:orientation="horizontal"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:background="@color/fabColor"
                            android:id="@+id/tituloL"
                            android:layout_centerHorizontal="true">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textAppearance="?android:attr/textAppearanceLarge"
                                android:text="@string/pista"
                                android:id="@+id/textView"
                                android:textColor="#ffffff"
                                android:textSize="27dp"
                                android:gravity="left"
                                android:layout_alignParentTop="true"
                                android:layout_alignParentLeft="true"
                                android:layout_alignParentStart="true"
                                android:layout_marginLeft="11dp"/>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textAppearance="?android:attr/textAppearanceLarge"
                                android:text="@string/estado"
                                android:id="@+id/textView17"
                                android:textColor="#ffffff"
                                android:textSize="27dp"
                                android:layout_alignParentTop="true"
                                android:layout_centerHorizontal="true"
                                android:gravity="center_vertical|center_horizontal" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textAppearance="?android:attr/textAppearanceLarge"
                                android:text="@string/tiponieve"
                                android:id="@+id/textView18"
                                android:textColor="#ffffff"
                                android:textSize="27dp"
                                android:gravity="right"
                                android:layout_alignParentTop="true"
                                android:layout_alignParentRight="true"
                                android:layout_alignParentEnd="true"
                                android:layout_marginRight="11dp"/>

                        </RelativeLayout>

                        <LinearLayout
                            android:orientation="vertical"
                            android:layout_height="wrap_content"
                            android:layout_width="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:layout_below="@id/tituloL"
                            android:id="@+id/linear1">

                            <GridView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:numColumns="3"
                                android:stretchMode="columnWidth"
                                android:id="@+id/tabla"
                                android:layout_gravity="center_horizontal">
                            </GridView>
                        </LinearLayout>

                    </LinearLayout>

                    <LinearLayout android:id="@+id/tab2"
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" >

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:background="@color/fabColor"
                        android:id="@+id/tituloLa"
                        android:layout_centerHorizontal="true"
                        >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="@string/medios"
                        android:id="@+id/tituloM"
                        android:textColor="#ffffff"
                        android:textSize="27dp"
                        android:layout_marginLeft="11dp"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:text="@string/condicion"
                            android:id="@+id/tituloE"
                            android:textColor="#ffffff"
                            android:textSize="27dp"
                            android:layout_marginLeft="80dp" />

                    </LinearLayout>

                        <GridView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:numColumns="2"
                            android:stretchMode="columnWidth"
                            android:id="@+id/tabla2"
                            android:layout_gravity="center_horizontal">
                        </GridView>


                    </LinearLayout>

                    <LinearLayout android:id="@+id/tab3"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:background="@color/fabColor"
                        android:id="@+id/titulot3"
                        android:layout_centerHorizontal="true">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:text="@string/estado"
                            android:id="@+id/tituloEs"
                            android:textColor="#ffffff"
                            android:textSize="27dp"
                            android:layout_marginLeft="11dp"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:text="@string/observaciones"
                            android:id="@+id/tituloO"
                            android:textColor="#ffffff"
                            android:textSize="27dp"
                            android:layout_marginLeft="20dp" />

                    </LinearLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:layout_width="125dp"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceSmall"
                            android:id="@+id/textViewE"
                            android:layout_alignParentTop="true"
                            android:layout_alignParentLeft="true"
                            android:layout_alignParentStart="true"
                            android:textSize="25dp"
                            android:layout_marginRight="5dp"
                            android:textColor="#000000"
                            android:layout_marginLeft="6dp"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceSmall"
                            android:id="@+id/textViewO1"
                            android:layout_alignParentTop="true"
                            android:layout_toRightOf="@+id/textViewE"
                            android:layout_alignBottom="@+id/textViewE"
                            android:layout_alignParentRight="true"
                            android:layout_alignParentEnd="true"
                            android:textSize="18dp"
                            android:textColor="#000000"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceSmall"
                            android:layout_below="@+id/textViewO1"
                            android:layout_toRightOf="@+id/textViewE"
                            android:layout_alignParentRight="true"
                            android:layout_alignParentEnd="true"
                            android:id="@+id/textViewO2"
                            android:textSize="18dp"
                            android:textColor="#000000"
                            android:textAlignment="center"/>

                    </RelativeLayout>


                </LinearLayout>


                </FrameLayout>

            </LinearLayout>

        </TabHost>

    </LinearLayout>

</RelativeLayout>

